<resources>
    <string name="app_name">Sulley Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove_all_logs">Remove all logs</string>
    <string name="start_scan">Start adv</string>
    <string name="stop_proximity">Stop prox</string>
    <string name="start_proximity">Start prox</string>
    <string name="stop_scan">Stop adv</string>
    <string name="pin_top">Pin top</string>
    <string name="unpinned">unpinned</string>
    <string name="pinned">pinned</string>
    <string name="serial_number">Serial: %1$s </string>
    <string name="rssi">RSSI : %1$d </string>
    <string name="last_seen">Last seen:\n%1$d sec. ago </string>
    <string name="longest_interval">Longest interval: %1$d sec.</string>
    <string name="average_interval">Average interval: %1$s sec.</string>
    <string name="boot_mode">Is in BootLoader Mode!</string>
    <string name="sensors">Sensors</string>
    <string name="sensor_version">Sensor version: %1$s</string>
    <string name="connect">Connect</string>
    <string name="log">Log (%1$d):</string>
    <string name="blustream_io">blustream.io</string>
    <string name="sulley_library">Sulley Library</string>
    <string name="proximity">Proximity</string>
    <string name="connection_state_changes">Connection (%1$d)</string>
    <string name="advertisement_events">Advertisement (%1$d)</string>
    <string name="data_received_events">Data received (%1$d)</string>
    <string name="ibeacon_events">IBeacon (%1$d)</string>
    <string name="losses_percentage">losses: %1$s %% (%2$d timeouts)</string>
    <string name="scan_duration">Scan duration:\n%1$s</string>

    //OTAU Strings
    <string name="otau_get_properties">Get OTAU Properties</string>
</resources>
