<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_all_logs"
        android:orderInCategory="100"
        android:title="@string/action_remove_all_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="200"
        android:title="@string/start_scan"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_proximity"
        android:orderInCategory="200"
        android:title="@string/start_proximity"
        app:showAsAction="ifRoom" />

</menu>
