<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sensorItemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <Switch
        android:id="@+id/pinTopSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_top"
        android:textOff="@string/unpinned"
        android:textOn="@string/pinned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/serialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/serial_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/pinTopSwitch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastSeenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:lines="2"
        android:text="Last seen:\n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/serialTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rssiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rssi"
        app:layout_constraintStart_toEndOf="@id/lastSeenTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_is_boot_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/boot_mode"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>